feat: allow to add employee images
