# shared/proto/employee-service/models/employee_image.pb.go
@@ -1,0 +1,131 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/models/employee_image.proto
+
+package models
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type EmployeeImage struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	ImageBase64   string                 `protobuf:"bytes,2,opt,name=imageBase64,proto3" json:"imageBase64,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *EmployeeImage) Reset() {
+	*x = EmployeeImage{}
+	mi := &file_employee_service_models_employee_image_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *EmployeeImage) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*EmployeeImage) ProtoMessage() {}
+
+func (x *EmployeeImage) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_models_employee_image_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use EmployeeImage.ProtoReflect.Descriptor instead.
+func (*EmployeeImage) Descriptor() ([]byte, []int) {
+	return file_employee_service_models_employee_image_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *EmployeeImage) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *EmployeeImage) GetImageBase64() string {
+	if x != nil {
+		return x.ImageBase64
+	}
+	return ""
+}
+
+var File_employee_service_models_employee_image_proto protoreflect.FileDescriptor
+
+const file_employee_service_models_employee_image_proto_rawDesc = "" +
+	"\n" +
+	",employee-service/models/employee_image.proto\x12&employee_service.models.employee_image\"A\n" +
+	"\rEmployeeImage\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12 \n" +
+	"\vimageBase64\x18\x02 \x01(\tR\vimageBase64BEZCgithub.com/nicodanke/gesty-api/shared/proto/employee-service/modelsb\x06proto3"
+
+var (
+	file_employee_service_models_employee_image_proto_rawDescOnce sync.Once
+	file_employee_service_models_employee_image_proto_rawDescData []byte
+)
+
+func file_employee_service_models_employee_image_proto_rawDescGZIP() []byte {
+	file_employee_service_models_employee_image_proto_rawDescOnce.Do(func() {
+		file_employee_service_models_employee_image_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_models_employee_image_proto_rawDesc), len(file_employee_service_models_employee_image_proto_rawDesc)))
+	})
+	return file_employee_service_models_employee_image_proto_rawDescData
+}
+
+var file_employee_service_models_employee_image_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_employee_service_models_employee_image_proto_goTypes = []any{
+	(*EmployeeImage)(nil), // 0: employee_service.models.employee_image.EmployeeImage
+}
+var file_employee_service_models_employee_image_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_models_employee_image_proto_init() }
+func file_employee_service_models_employee_image_proto_init() {
+	if File_employee_service_models_employee_image_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_models_employee_image_proto_rawDesc), len(file_employee_service_models_employee_image_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_models_employee_image_proto_goTypes,
+		DependencyIndexes: file_employee_service_models_employee_image_proto_depIdxs,
+		MessageInfos:      file_employee_service_models_employee_image_proto_msgTypes,
+	}.Build()
+	File_employee_service_models_employee_image_proto = out.File
+	file_employee_service_models_employee_image_proto_goTypes = nil
+	file_employee_service_models_employee_image_proto_depIdxs = nil
+}
