# shared/proto/employee-service/requests/employee/rpc_add_image_employee.pb.go
@@ -1,0 +1,181 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/requests/employee/rpc_add_image_employee.proto
+
+package employee
+
+import (
+	models "github.com/nicodanke/gesty-api/shared/proto/employee-service/models"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type AddImageEmployeeRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	ImageBase64   string                 `protobuf:"bytes,2,opt,name=imageBase64,proto3" json:"imageBase64,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *AddImageEmployeeRequest) Reset() {
+	*x = AddImageEmployeeRequest{}
+	mi := &file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AddImageEmployeeRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddImageEmployeeRequest) ProtoMessage() {}
+
+func (x *AddImageEmployeeRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddImageEmployeeRequest.ProtoReflect.Descriptor instead.
+func (*AddImageEmployeeRequest) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *AddImageEmployeeRequest) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *AddImageEmployeeRequest) GetImageBase64() string {
+	if x != nil {
+		return x.ImageBase64
+	}
+	return ""
+}
+
+type AddImageEmployeeResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	EmployeeImage *models.EmployeeImage  `protobuf:"bytes,1,opt,name=employeeImage,proto3" json:"employeeImage,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *AddImageEmployeeResponse) Reset() {
+	*x = AddImageEmployeeResponse{}
+	mi := &file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AddImageEmployeeResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddImageEmployeeResponse) ProtoMessage() {}
+
+func (x *AddImageEmployeeResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddImageEmployeeResponse.ProtoReflect.Descriptor instead.
+func (*AddImageEmployeeResponse) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *AddImageEmployeeResponse) GetEmployeeImage() *models.EmployeeImage {
+	if x != nil {
+		return x.EmployeeImage
+	}
+	return nil
+}
+
+var File_employee_service_requests_employee_rpc_add_image_employee_proto protoreflect.FileDescriptor
+
+const file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDesc = "" +
+	"\n" +
+	"?employee-service/requests/employee/rpc_add_image_employee.proto\x125employee_service.requests.employee.add_image_employee\x1a,employee-service/models/employee_image.proto\"K\n" +
+	"\x17AddImageEmployeeRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12 \n" +
+	"\vimageBase64\x18\x02 \x01(\tR\vimageBase64\"w\n" +
+	"\x18AddImageEmployeeResponse\x12[\n" +
+	"\remployeeImage\x18\x01 \x01(\v25.employee_service.models.employee_image.EmployeeImageR\remployeeImageBPZNgithub.com/nicodanke/gesty-api/shared/proto/employee-service/requests/employeeb\x06proto3"
+
+var (
+	file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescOnce sync.Once
+	file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescData []byte
+)
+
+func file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescGZIP() []byte {
+	file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescOnce.Do(func() {
+		file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDesc), len(file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDesc)))
+	})
+	return file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDescData
+}
+
+var file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_employee_service_requests_employee_rpc_add_image_employee_proto_goTypes = []any{
+	(*AddImageEmployeeRequest)(nil),  // 0: employee_service.requests.employee.add_image_employee.AddImageEmployeeRequest
+	(*AddImageEmployeeResponse)(nil), // 1: employee_service.requests.employee.add_image_employee.AddImageEmployeeResponse
+	(*models.EmployeeImage)(nil),     // 2: employee_service.models.employee_image.EmployeeImage
+}
+var file_employee_service_requests_employee_rpc_add_image_employee_proto_depIdxs = []int32{
+	2, // 0: employee_service.requests.employee.add_image_employee.AddImageEmployeeResponse.employeeImage:type_name -> employee_service.models.employee_image.EmployeeImage
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_requests_employee_rpc_add_image_employee_proto_init() }
+func file_employee_service_requests_employee_rpc_add_image_employee_proto_init() {
+	if File_employee_service_requests_employee_rpc_add_image_employee_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDesc), len(file_employee_service_requests_employee_rpc_add_image_employee_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_requests_employee_rpc_add_image_employee_proto_goTypes,
+		DependencyIndexes: file_employee_service_requests_employee_rpc_add_image_employee_proto_depIdxs,
+		MessageInfos:      file_employee_service_requests_employee_rpc_add_image_employee_proto_msgTypes,
+	}.Build()
+	File_employee_service_requests_employee_rpc_add_image_employee_proto = out.File
+	file_employee_service_requests_employee_rpc_add_image_employee_proto_goTypes = nil
+	file_employee_service_requests_employee_rpc_add_image_employee_proto_depIdxs = nil
+}
