# shared/proto/employee-service/requests/employee/rpc_get_images_employee.pb.go
@@ -1,0 +1,172 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/requests/employee/rpc_get_images_employee.proto
+
+package employee
+
+import (
+	models "github.com/nicodanke/gesty-api/shared/proto/employee-service/models"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetImagesEmployeeRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetImagesEmployeeRequest) Reset() {
+	*x = GetImagesEmployeeRequest{}
+	mi := &file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetImagesEmployeeRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetImagesEmployeeRequest) ProtoMessage() {}
+
+func (x *GetImagesEmployeeRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetImagesEmployeeRequest.ProtoReflect.Descriptor instead.
+func (*GetImagesEmployeeRequest) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetImagesEmployeeRequest) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+type GetImagesEmployeeResponse struct {
+	state          protoimpl.MessageState  `protogen:"open.v1"`
+	EmployeeImages []*models.EmployeeImage `protobuf:"bytes,1,rep,name=employeeImages,proto3" json:"employeeImages,omitempty"`
+	unknownFields  protoimpl.UnknownFields
+	sizeCache      protoimpl.SizeCache
+}
+
+func (x *GetImagesEmployeeResponse) Reset() {
+	*x = GetImagesEmployeeResponse{}
+	mi := &file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetImagesEmployeeResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetImagesEmployeeResponse) ProtoMessage() {}
+
+func (x *GetImagesEmployeeResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetImagesEmployeeResponse.ProtoReflect.Descriptor instead.
+func (*GetImagesEmployeeResponse) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetImagesEmployeeResponse) GetEmployeeImages() []*models.EmployeeImage {
+	if x != nil {
+		return x.EmployeeImages
+	}
+	return nil
+}
+
+var File_employee_service_requests_employee_rpc_get_images_employee_proto protoreflect.FileDescriptor
+
+const file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDesc = "" +
+	"\n" +
+	"@employee-service/requests/employee/rpc_get_images_employee.proto\x126employee_service.requests.employee.get_images_employee\x1a,employee-service/models/employee_image.proto\"*\n" +
+	"\x18GetImagesEmployeeRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\"z\n" +
+	"\x19GetImagesEmployeeResponse\x12]\n" +
+	"\x0eemployeeImages\x18\x01 \x03(\v25.employee_service.models.employee_image.EmployeeImageR\x0eemployeeImagesBPZNgithub.com/nicodanke/gesty-api/shared/proto/employee-service/requests/employeeb\x06proto3"
+
+var (
+	file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescOnce sync.Once
+	file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescData []byte
+)
+
+func file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescGZIP() []byte {
+	file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescOnce.Do(func() {
+		file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDesc), len(file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDesc)))
+	})
+	return file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDescData
+}
+
+var file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_employee_service_requests_employee_rpc_get_images_employee_proto_goTypes = []any{
+	(*GetImagesEmployeeRequest)(nil),  // 0: employee_service.requests.employee.get_images_employee.GetImagesEmployeeRequest
+	(*GetImagesEmployeeResponse)(nil), // 1: employee_service.requests.employee.get_images_employee.GetImagesEmployeeResponse
+	(*models.EmployeeImage)(nil),      // 2: employee_service.models.employee_image.EmployeeImage
+}
+var file_employee_service_requests_employee_rpc_get_images_employee_proto_depIdxs = []int32{
+	2, // 0: employee_service.requests.employee.get_images_employee.GetImagesEmployeeResponse.employeeImages:type_name -> employee_service.models.employee_image.EmployeeImage
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_requests_employee_rpc_get_images_employee_proto_init() }
+func file_employee_service_requests_employee_rpc_get_images_employee_proto_init() {
+	if File_employee_service_requests_employee_rpc_get_images_employee_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDesc), len(file_employee_service_requests_employee_rpc_get_images_employee_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_requests_employee_rpc_get_images_employee_proto_goTypes,
+		DependencyIndexes: file_employee_service_requests_employee_rpc_get_images_employee_proto_depIdxs,
+		MessageInfos:      file_employee_service_requests_employee_rpc_get_images_employee_proto_msgTypes,
+	}.Build()
+	File_employee_service_requests_employee_rpc_get_images_employee_proto = out.File
+	file_employee_service_requests_employee_rpc_get_images_employee_proto_goTypes = nil
+	file_employee_service_requests_employee_rpc_get_images_employee_proto_depIdxs = nil
+}
